feat: Add crud for titles
